--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     ]
   },
   "devDependencies": {
-    "@types/chai": "^4.1.1",
-    "@types/mocha": "^2.2.46",
-    "chai": "^4.1.2",
+    "@types/chai": "4.1.1",
+    "@types/mocha": "2.2.46",
+    "chai": "4.1.2",
     "concurrently": "3.5.1",
-    "mocha": "^5.0.0",
+    "mocha": "5.0.0",
     "nodemon": "1.14.11",
     "ts-node": "4.1.0",
     "typescript": "2.6.2"
