--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "9.3.0",
-    "dice-bag": "0.1.2"
+    "dice-bag": "0.1.2",
+    "events": "^3.0.0"
   },
   "nodemonConfig": {
     "ignore": [
