--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
   "name": "cm-check",
   "version": "1.0.0",
+  "main": "dist/index.js",
+  "types": "types/index.dts",
   "description": "Role Playing Game (RPG) Toolkit which facilitates easy-to-use and customizable checks.  Ability checks, combat checks, and anything else you can imagine.",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
   "author": "Creative Mutagens <timon.davis@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "9.3.0",
+    "@types/node": "^12.12.14",
+    "barrelsby": "^2.2.0",
+    "browserify": "^16.5.0",
     "dice-bag": "0.1.2",
-    "events": "^3.0.0"
+    "dts-bundle": "^0.7.3",
+    "events": "^3.0.0",
+    "glob": "^7.1.6",
+    "global": "^4.4.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-run-command": "^0.0.10",
+    "gulplog": "^1.0.0",
+    "install": "^0.13.0",
+    "merge2": "^1.3.0",
+    "typescript": "^3.7.2"
   },
   "nodemonConfig": {
     "ignore": [
@@ -19,17 +30,29 @@
   "devDependencies": {
     "@types/chai": "4.1.1",
     "@types/mocha": "2.2.46",
-    "chai": "4.1.2",
+    "chai": "4.2.0",
     "concurrently": "3.5.1",
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-minify": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "inline-source-map": "^0.6.2",
+    "lodash.assign": "^4.2.0",
     "mocha": "5.0.0",
     "nodemon": "1.14.11",
+    "ts-loader": "^6.2.1",
     "ts-node": "4.1.0",
-    "typescript": "2.6.2"
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.11.1",
+    "webpack": "^4.41.2"
   },
   "scripts": {
     "start": "concurrently \"npm run build:live\" \"npm run build:disk\"",
     "build:live": "nodemon --exec ./node_modules/.bin/ts-node ./src/index.ts",
-    "build:disk": "exec tsc -w",
-    "test": "mocha -r ts-node/register ./src/Test/**/*.ts"
+    "build:disk": "exec tsc",
+    "test": "mocha -r ts-node/register ./src/Test/**/*.ts",
+    "barrels": "barrelsby -d src/"
   }
 }
