--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   "author": "Creative Mutagens <timon.davis@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "9.3.0",
+    "@types/chai": "^4.2.5",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.12.14",
+    "chai": "^4.2.0",
     "dice-bag": "0.1.2",
-    "events": "^3.0.0"
+    "events": "^3.0.0",
+    "mocha": "^6.2.2"
   },
   "nodemonConfig": {
     "ignore": [
@@ -17,14 +21,10 @@
     ]
   },
   "devDependencies": {
-    "@types/chai": "4.1.1",
-    "@types/mocha": "2.2.46",
-    "chai": "4.1.2",
     "concurrently": "3.5.1",
-    "mocha": "5.0.0",
     "nodemon": "1.14.11",
     "ts-node": "4.1.0",
-    "typescript": "2.6.2"
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "start": "concurrently \"npm run build:live\" \"npm run build:disk\"",
