--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "chai": "^4.2.0",
     "dice-bag": "0.1.2",
     "events": "^3.0.0",
-    "mocha": "^6.2.2"
+    "mocha": "^6.2.2",
+    "typescript": "~3.5.3"
   },
   "nodemonConfig": {
     "ignore": [
@@ -23,8 +24,7 @@
   "devDependencies": {
     "concurrently": "3.5.1",
     "nodemon": "1.14.11",
-    "ts-node": "4.1.0",
-    "typescript": "^3.7.2"
+    "ts-node": "4.1.0"
   },
   "scripts": {
     "start": "concurrently \"npm run build:live\" \"npm run build:disk\"",
