--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "devDependencies": {
     "concurrently": "3.5.1",
     "nodemon": "1.14.11",
-    "ts-node": "4.1.0",
-    "@types/node": "^14.14.34"
+    "ts-node": "4.1.0"
   },
   "scripts": {
     "start": "concurrently \"npm run build:live\" \"npm run build:disk\"",
